--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Tue Jan 04 14:53:27 CET 2022
-sdk.dir=C\:\\Users\\yanni\\AppData\\Local\\Android\\Sdk
+sdk.dir=C:\\Users\\PC DPT INFO IUTA\\AppData\\Local\\Android\\Sdk
